<resources>
    <string name="app_name">Emergency Service App</string>
    <string name="facebook_app_id">162738351211636</string>
    <string name="fb_login_protocol_scheme">fb423623411393868</string>
    <string name="title_activity_settings">Settings</string>
    <string name="fa_icon_cog">&#xf013;</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Settings</string>

    <string name="pref_title_share_location">Share my location</string>
    <string name="pref_description_share_location"> Allow your Facebook audience to see where you
        triggered the alarm from.
    </string>
    <string name="pref_title_post_message">Post</string>
    <string name="pref_description_post_message">Change the message that your Facebook Audience sees
       when you trigger an alarm.
    </string>
    <string name="pref_post_message_default">I triggered an Alarm via an Emergency Service app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
